--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -684,7 +684,7 @@ body {
     left: 0; /* Align to the left */
     text-align: left; /* Left-align the text */
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: var(--accent5);
     color: white;
     width: 100%;
     height: 100%; /* Make the text fill the whole box */
