--- a/src/frontend/destination_search/templates/location_detail.html
+++ b/src/frontend/destination_search/templates/location_detail.html
@@ -33,7 +33,7 @@
                 <span class="tooltip-text category-description-tooltip-text">{{ category.category_description }}</span>
             </button>
             {% endfor %}
-            {% if previous_locations %}
+            {% if include_similarity %}
                 <button class="tablinks has-tooltip" onclick="openCategory(event, 'Similarity')">
                     Similarity
                     <span class="tooltip-text category-description-tooltip-text">
@@ -160,19 +160,11 @@
     </div>
     {% endfor %}
 
-    {% if previous_locations %}
+    {% if include_similarity %}
         <div id="Similarity" class="tabcontent">
-            <div class="category-content-container">
-                In this tab, we highlight main similarities and differences between this destination and previous destinations.
-                Your previous locations are:
-                <ul>
-                    {% for location in previous_locations %}
-                        <li>{{ location }}</li>
-                    {% endfor %}
-                    {% for country in previous_countries %}
-                        <li>{{ country }}</li>
-                    {% endfor %}
-                    </ul>
+            <div id="similarity-text-output" class="category-content-container">
+                <div class="category-content-title">Comparison of {{ location.city }} with your previous destinations</div>
+                <form method="post">{% csrf_token %}</form>
             </div>
         </div>
     {% endif %}
@@ -461,6 +453,43 @@
 
     // Run the function when a scroll event is detected
     window.addEventListener('scroll', stickyLocationHeader);
+</script>
+
+<!-- Similarity text API call -->
+<script>
+    // Get the CSRF token
+    var csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+
+    // Get the similarity_locations from the Django context
+    var similarityLocations = JSON.parse('{{ similarity_locations|safe }}');
+
+    // Only make the API call if similarity_locations.previous_locations has length > 0
+    if (similarityLocations.previous_locations.length > 0) {
+
+        // Make the API call
+        fetch('/api/openai', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': csrfToken
+            },
+            body: JSON.stringify(similarityLocations)
+        })
+        .then(response => response.json())
+        .then(data => {
+            // Convert line breaks into HTML paragraphs
+            var paragraphs = data.text.split('\n\n').map(function(line) {
+                return '<p>' + line + '</p>';
+            }).join('');
+
+            // Get the output div
+            const outputDiv = document.getElementById('similarity-text-output');
+
+            // Append the new content to the existing content of the div
+            outputDiv.innerHTML += paragraphs;
+        })
+        .catch(error => console.error('Error:', error));
+    }
 </script>
 
 {% endblock %}
