--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -264,7 +264,7 @@ Results
 <div class="results-container">
 
     <!-- Previous locations-->
-    <div class="destination-type-title">Your previous destinations</div>
+    <div class="segment-title">Your previous destinations</div>
     <div class="previous-location-list-container">
         {% for location in previous_locations_list %}
             <div class="previous-location-list-item-container">
@@ -294,7 +294,7 @@ Results
         {% endfor %}
     </div>
 
-    <div class="destination-type-title">New destinations</div>
+    <div class="segment-title">New destinations</div>
 
     <!--- Sort-by dropdown -->
     <div class="sort-container">
