Reachability map (routes)

--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -1143,6 +1143,12 @@ body {
     border-radius: 10px;
 }
 
+#routesid {
+    height: 400px;
+    z-index: 1;
+    border-radius: 10px;
+}
+
 .weather-diagram-container {
     width: fit-content;
 }
