Fill about page with content

--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -797,6 +797,14 @@ body {
     margin-right: 15px;
 }
 
+/* About page ---------------------------------------------------------------*/
+.about-page-container {
+    width: 80%;
+    max-width: 1000px;
+    margin: max(min(100px, 20vh), 10px) 0;
+    color: var(--darkgrey);
+}
+
 /* Details page -------------------------------------------------------------*/
 
 .details-page-container {
